@startuml
class main.fourwheels.AutoElettrica {
- int autonomiaBatteria
+ void setAutonomiaBatteria(int)
+ double getAutonomiaBatteria()
+ void ricarica()
}


interface main.interfaces.Assicurabile {
~ double getCostoAssicurazione()
}

class main.twowheels.Moto {
- String tipo
- Motore motore
+ void faiRumore()
+ Motore getMotore()
+ void setMotore(Motore)
+ String getTipo()
+ void setTipo(String)
+ boolean equals(Object)
+ int hashCode()
+ String toString()
+ double getCostoAssicurazione()
+ double calcolaCostoRiparazione(int)
}


class main.fourwheels.Auto {
- int numero_di_porte
+ void faiRumore()
+ int getNumero_di_porte()
+ void setNumero_di_porte(int)
+ boolean equals(Object)
+ int hashCode()
+ double calcolaCostoRiparazione(int)
}


interface main.interfaces.Riparabile {
~ double calcolaCostoRiparazione(int)
}

abstract class main.Veicolo {
- String targa
- String marca
- String modello
- int posti
+ String getTarga()
+ void setTarga(String)
+ String getMarca()
+ void setMarca(String)
+ String getModello()
+ void setModello(String)
+ int getPosti()
+ void setPosti(int)
+ {abstract}void faiRumore()
+ boolean equals(Object)
+ int hashCode()
}


class main.mechanics.Motore {
- String numeroSerie
- String modello
+ String getNumeroSerie()
+ void setNumeroSerie(String)
+ String getModello()
+ void setModello(String)
+ boolean equals(Object)
+ int hashCode()
+ String toString()
}


class main.Main {
+ {static} void main(String[])
}

interface main.interfaces.VeicoloElettrico {
~ double getAutonomiaBatteria()
~ void ricarica()
}

class main.service.Officina {
~ List<Riparabile> veicoliInRiparazione
+ void accettaVeicolo(Riparabile)
+ void stampaSchedarioRiparazioni()
+ double calcolaCostoRiparazione(int)
}


class main.fourwheels.Camion {
- int capacita_massima_di_carico
+ int getCapacita_massima_di_carico()
+ void setCapacita_massima_di_carico(int)
+ void faiRumore()
}


class main.service.AgenziaAssicurativa {
~ Set<Assicurabile> veicoliAssicurati
+ void accettaVeicolo(Assicurabile)
+ void calcolaIncassoTotale()
}




main.interfaces.VeicoloElettrico <|.. main.fourwheels.AutoElettrica
main.fourwheels.Auto <|-- main.fourwheels.AutoElettrica
main.interfaces.Assicurabile <|.. main.twowheels.Moto
main.interfaces.Riparabile <|.. main.twowheels.Moto
main.Veicolo <|-- main.twowheels.Moto
main.interfaces.Riparabile <|.. main.fourwheels.Auto
main.Veicolo <|-- main.fourwheels.Auto
main.interfaces.Riparabile <|.. main.service.Officina
main.Veicolo <|-- main.fourwheels.Camion
@enduml